--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sofistik-tools",
   "main": "./lib/main",
   "version": "0.1.12",
-  "description": "A set of tools for cooperation with the SOFiSTiK software for Atom IDE",
+  "description": "A set of tools for cooperation with the SOFiSTiK software",
   "engines": {
     "atom": ">=1.56.0 <2.0.0"
   },
