--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "fuzzaldrin": "^2.1.0",
     "fuzzaldrin-plus": "^0.6.0"
   },
-  "license": "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
+  "license": "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007",
+  "package-deps": [
+    "language-sofistik"
+  ]
 }
