--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "license": "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007",
   "package-deps": [
-    "language-sofistik"
+    {
+        "name": "language-sofistik"
+    }
   ]
 }
