--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "atom-select-list": "^0.8.1",
     "etch": "^0.14.1",
     "fuzzaldrin": "^2.1.0",
-    "fuzzaldrin-plus": "^0.6.0"
+    "fuzzaldrin-plus": "^0.6.0",
+    "glob": "^7.2.0"
+  },
+  "consumedServices": {
+    "tree-view": {
+      "versions": {
+        "^1.0.0": "consumeTreeView"
+      }
+    }
   },
   "license": "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007",
   "package-deps": [
