fix name of help view cmds & animator 18

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
       "SOFiSTiK-tools:save-pictures-as-PDF",
       "SOFiSTiK-tools:open-protocol",
       "SOFiSTiK-tools:open-Animator",
+      "SOFiSTiK-tools:open-Animator-2018",
       "SOFiSTiK-tools:open-SSD",
       "SOFiSTiK-tools:open-WinGRAF",
       "SOFiSTiK-tools:open-Result-Viewer",
