--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "repository": "https://github.com/bacadra/atom-sofistik-tools",
   "dependencies": {
     "atom-select-list": "^0.8.1",
+    "etch": "^0.14.1",
     "fuzzaldrin": "^2.1.0",
     "fuzzaldrin-plus": "^0.6.0",
     "glob": "^7.2.0"
