--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   "dependencies": {
     "atom-select-list": "^0.8.1",
     "etch": "^0.14.1",
-    "fuzzaldrin": "^2.1.0",
-    "fuzzaldrin-plus": "^0.6.0",
-    "glob": "^7.2.0"
+    "glob": "^7.2.0",
+    "zadeh": "^3.0.0-beta.4"
   },
   "consumedServices": {
     "tree-view": {
