--- a/package.json
+++ b/package.json
@@ -51,9 +51,7 @@
       "SOFiSTiK-tools:open-Teddy-2",
       "SOFiSTiK-tools:open-Teddy-3",
       "SOFiSTiK-tools:open-Teddy-4",
-      "SOFiSTiK-tools:open-or-create-file-SOFiPLUS",
-      "SOFiSTiK-tools:open-file-SOFiPLUS",
-      "SOFiSTiK-tools:create-file-SOFiPLUS",
+      "SOFiSTiK-tools:open-SOFiPLUS",
       "SOFiSTiK-tools:export-CDB-to-DAT",
       "SOFiSTiK-tools:export-PLB-to-DOCX",
       "SOFiSTiK-tools:PROG-current-toggle",
