add teddy single

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
       "SOFiSTiK-tools:open-WinGRAF",
       "SOFiSTiK-tools:open-Result-Viewer",
       "SOFiSTiK-tools:open-Teddy",
+      "SOFiSTiK-tools:open-Teddy-single",
       "SOFiSTiK-tools:open-Teddy-1",
       "SOFiSTiK-tools:open-Teddy-2",
       "SOFiSTiK-tools:open-Teddy-3",
