--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
       "SOFiSTiK-tools:open-protocol",
       "SOFiSTiK-tools:open-Animator",
       "SOFiSTiK-tools:open-Animator-2018",
+      "SOFiSTiK-tools:open-Viewer",
+      "SOFiSTiK-tools:open-DB-info",
       "SOFiSTiK-tools:open-SSD",
       "SOFiSTiK-tools:open-WinGRAF",
       "SOFiSTiK-tools:open-Result-Viewer",
