--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
       "SOFiSTiK-tools:open-Teddy-2",
       "SOFiSTiK-tools:open-Teddy-3",
       "SOFiSTiK-tools:open-Teddy-4",
-      "SOFiSTiK-tools:open-SOFiPLUS",
       "SOFiSTiK-tools:export-CDB-to-DAT",
       "SOFiSTiK-tools:export-PLB-to-DOCX",
       "SOFiSTiK-tools:PROG-current-toggle",
@@ -73,7 +72,8 @@
     "atom-workspace": [
       "SOFiSTiK-tools:IFC-export",
       "SOFiSTiK-tools:IFC-import",
-      "SOFiSTiK-tools:open-CDBASE.CHM",
+      "SOFiSTiK-tools:open-cdbase.chm",
+      "SOFiSTiK-tools:open-SOFiPLUS",
       "SOFiSTiK-tools:toggle-help",
       "SOFiSTiK-tools:recache-help",
       "SOFiSTiK-tools:change-version"
