--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
       "SOFiSTiK-tools:open-SOFiPLUS",
       "SOFiSTiK-tools:toggle-help",
       "SOFiSTiK-tools:recache-help",
+      "SOFiSTiK-tools:toggle-dats",
+      "SOFiSTiK-tools:recache-dats",
       "SOFiSTiK-tools:change-version"
     ],
     ".tree-view": [
@@ -86,8 +88,8 @@
       "SOFiSTiK-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE]",
       "SOFiSTiK-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB]",
       "SOFiSTiK-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB]",
-      "SOFiSTiK-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB-PLB-BAK-SDB-DOCX-CFG]",
-      "SOFiSTiK-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB-PLB-BAK-SDB-DOCX-CFG]",
+      "SOFiSTiK-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB-PLB-BAK-SDB-DOCX-CFG-CSM]",
+      "SOFiSTiK-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB-PLB-BAK-SDB-DOCX-CFG-CSM]",
       "SOFiSTiK-tools:MSCA-Fix-[S]",
       "SOFiSTiK-tools:MSCA-Fix-[R]"
     ]
