renames and table

--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
       "SOFiSTiK-tools:current-help-externally",
       "SOFiSTiK-tools:calculation-WPS",
       "SOFiSTiK-tools:calculation-WPS-immediately",
-      "SOFiSTiK-tools:calculation-WPS-immediately-current-prog",
+      "SOFiSTiK-tools:calculation-WPS-current",
       "SOFiSTiK-tools:calculation-SPS-immediately",
       "SOFiSTiK-tools:open-report",
-      "SOFiSTiK-tools:open-report-automatic-refresh",
+      "SOFiSTiK-tools:open-report-auto-refresh",
       "SOFiSTiK-tools:save-report-as-PDF",
       "SOFiSTiK-tools:save-pictures-as-PDF",
       "SOFiSTiK-tools:open-protocol",
