add sofiplus tree command

--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
       "SOFiSTiK-tools:MSCA-Fix-[S]",
       "SOFiSTiK-tools:MSCA-Fix-[R]",
       "SOFiSTiK-tools:open-Animator",
-      "SOFiSTiK-tools:open-Animator-2018"
+      "SOFiSTiK-tools:open-Animator-2018",
+      "SOFiSTiK-tools:open-SOFiPLUS"
     ]
   },
   "license": "MIT",
