new open commands

--- a/package.json
+++ b/package.json
@@ -38,25 +38,6 @@
       "SOFiSTiK-tools:calculation-WPS-immediately",
       "SOFiSTiK-tools:calculation-WPS-current",
       "SOFiSTiK-tools:calculation-SPS-immediately",
-      "SOFiSTiK-tools:open-report",
-      "SOFiSTiK-tools:open-report-auto-refresh",
-      "SOFiSTiK-tools:save-report-as-PDF",
-      "SOFiSTiK-tools:save-pictures-as-PDF",
-      "SOFiSTiK-tools:open-protocol",
-      "SOFiSTiK-tools:open-Animator",
-      "SOFiSTiK-tools:open-Animator-2018",
-      "SOFiSTiK-tools:open-Viewer",
-      "SOFiSTiK-tools:open-DB-info",
-      "SOFiSTiK-tools:open-SSD",
-      "SOFiSTiK-tools:open-WinGRAF",
-      "SOFiSTiK-tools:open-Result-Viewer",
-      "SOFiSTiK-tools:open-Teddy",
-      "SOFiSTiK-tools:open-Teddy-single",
-      "SOFiSTiK-tools:open-Teddy-1",
-      "SOFiSTiK-tools:open-Teddy-2",
-      "SOFiSTiK-tools:open-Teddy-3",
-      "SOFiSTiK-tools:open-Teddy-4",
-      "SOFiSTiK-tools:export-CDB-to-DAT",
       "SOFiSTiK-tools:export-PLB-to-DOCX",
       "SOFiSTiK-tools:PROG-current-toggle",
       "SOFiSTiK-tools:PROG-all-toggle",
@@ -69,16 +50,35 @@
       "SOFiSTiK-tools:PROG-below-ON",
       "SOFiSTiK-tools:PROG-below-OFF",
       "SOFiSTiK-tools:clear-URS-tags",
-      "SOFiSTiK-tools:open-SOFiPLUS"
+      "SOFiSTiK-tools:open-Animator",
+      "SOFiSTiK-tools:open-Animator-2018",
+      "SOFiSTiK-tools:open-report",
+      "SOFiSTiK-tools:open-report-auto-refresh",
+      "SOFiSTiK-tools:save-report-as-PDF",
+      "SOFiSTiK-tools:save-pictures-as-PDF",
+      "SOFiSTiK-tools:open-protocol",
+      "SOFiSTiK-tools:open-Viewer",
+      "SOFiSTiK-tools:open-DB-info",
+      "SOFiSTiK-tools:open-SSD",
+      "SOFiSTiK-tools:open-WinGRAF",
+      "SOFiSTiK-tools:open-Result-Viewer",
+      "SOFiSTiK-tools:open-Teddy",
+      "SOFiSTiK-tools:open-Teddy-single",
+      "SOFiSTiK-tools:open-Teddy-1",
+      "SOFiSTiK-tools:open-Teddy-2",
+      "SOFiSTiK-tools:open-Teddy-3",
+      "SOFiSTiK-tools:open-Teddy-4",
+      "SOFiSTiK-tools:open-SOFiPLUS",
+      "SOFiSTiK-tools:export-CDB"
     ],
     "atom-workspace": [
       "SOFiSTiK-tools:IFC-export",
       "SOFiSTiK-tools:IFC-import",
       "SOFiSTiK-tools:open-cdbase.chm",
-      "SOFiSTiK-tools:toggle-help",
-      "SOFiSTiK-tools:recache-help",
       "SOFiSTiK-tools:toggle-examples",
-      "SOFiSTiK-tools:recache-examples",
+      "SOFiSTiK-tools:recache-examples      ",
+      "SOFiSTiK-tools:toggle-help",
+      "SOFiSTiK-tools:recache-help      ",
       "SOFiSTiK-tools:change-version",
       "SOFiSTiK-tools:version-2018",
       "SOFiSTiK-tools:version-2020",
@@ -100,7 +100,24 @@
       "SOFiSTiK-tools:MSCA-Fix-[R]",
       "SOFiSTiK-tools:open-Animator",
       "SOFiSTiK-tools:open-Animator-2018",
-      "SOFiSTiK-tools:open-SOFiPLUS"
+      "SOFiSTiK-tools:open-report",
+      "SOFiSTiK-tools:open-report-auto-refresh",
+      "SOFiSTiK-tools:save-report-as-PDF",
+      "SOFiSTiK-tools:save-pictures-as-PDF",
+      "SOFiSTiK-tools:open-protocol",
+      "SOFiSTiK-tools:open-Viewer",
+      "SOFiSTiK-tools:open-DB-info",
+      "SOFiSTiK-tools:open-SSD",
+      "SOFiSTiK-tools:open-WinGRAF",
+      "SOFiSTiK-tools:open-Result-Viewer",
+      "SOFiSTiK-tools:open-Teddy",
+      "SOFiSTiK-tools:open-Teddy-single",
+      "SOFiSTiK-tools:open-Teddy-1",
+      "SOFiSTiK-tools:open-Teddy-2",
+      "SOFiSTiK-tools:open-Teddy-3",
+      "SOFiSTiK-tools:open-Teddy-4",
+      "SOFiSTiK-tools:open-SOFiPLUS",
+      "SOFiSTiK-tools:export-CDB"
     ]
   },
   "license": "MIT",
