--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "atom-select-list": "^0.8.1",
     "etch": "^0.14.1",
     "glob": "^10.3.3",
-    "minimatch": "^5.1.0",
-    "zadeh": "^3.0.0-beta.4"
+    "minimatch": "^5.1.0"
   },
   "consumedServices": {
     "tree-view": {
