--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sofistik-tools",
   "main": "./lib/main",
   "version": "0.5.0",
-  "description": "A set of tools for cooperation with the SOFiSTiK software",
+  "description": "A superset of commands to improve SOFiSTiK workflow",
   "engines": {
     "atom": ">=1.100.0 <2.0.0"
   },
@@ -75,15 +75,16 @@
       "SOFiSTiK-tools:IFC-import",
       "SOFiSTiK-tools:open-cdbase.chm",
       "SOFiSTiK-tools:toggle-examples",
-      "SOFiSTiK-tools:recache-examples      ",
+      "SOFiSTiK-tools:recache-examples",
       "SOFiSTiK-tools:toggle-help",
-      "SOFiSTiK-tools:recache-help      ",
+      "SOFiSTiK-tools:recache-help",
       "SOFiSTiK-tools:change-version",
       "SOFiSTiK-tools:version-2018",
       "SOFiSTiK-tools:version-2020",
       "SOFiSTiK-tools:version-2022",
       "SOFiSTiK-tools:version-2023",
-      "SOFiSTiK-tools:version-2024"
+      "SOFiSTiK-tools:version-2024",
+      "SOFiSTiK-tools:version-2025"
     ],
     ".tree-view": [
       "SOFiSTiK-tools:clean-by-glob-pattern",
