change command name from SOFiSTiK to sofistik

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [
     "bacadra",
-    "SOFiSTiK",
+    "sofistik",
     "tools"
   ],
   "readmeFilename": "README.md",
@@ -30,94 +30,94 @@
   },
   "activationCommands": {
     "atom-text-editor[data-grammar=\"source sofistik\"]": [
-      "SOFiSTiK-tools:current-help",
-      "SOFiSTiK-tools:current-help-[M]",
-      "SOFiSTiK-tools:current-help-[E]",
-      "SOFiSTiK-tools:calculation-WPS",
-      "SOFiSTiK-tools:calculation-WPS-immediately",
-      "SOFiSTiK-tools:calculation-WPS-current",
-      "SOFiSTiK-tools:calculation-SPS-immediately",
-      "SOFiSTiK-tools:export-PLB-to-DOCX",
-      "SOFiSTiK-tools:PROG-current-toggle",
-      "SOFiSTiK-tools:PROG-all-toggle",
-      "SOFiSTiK-tools:PROG-all-ON",
-      "SOFiSTiK-tools:PROG-all-OFF",
-      "SOFiSTiK-tools:PROG-above-toggle",
-      "SOFiSTiK-tools:PROG-above-ON",
-      "SOFiSTiK-tools:PROG-above-OFF",
-      "SOFiSTiK-tools:PROG-below-toggle",
-      "SOFiSTiK-tools:PROG-below-ON",
-      "SOFiSTiK-tools:PROG-below-OFF",
-      "SOFiSTiK-tools:clear-URS-tags",
-      "SOFiSTiK-tools:open-Animator",
-      "SOFiSTiK-tools:open-Animator-2018",
-      "SOFiSTiK-tools:open-report",
-      "SOFiSTiK-tools:open-report-auto-refresh",
-      "SOFiSTiK-tools:save-report-as-PDF",
-      "SOFiSTiK-tools:save-pictures-as-PDF",
-      "SOFiSTiK-tools:open-protocol",
-      "SOFiSTiK-tools:open-Viewer",
-      "SOFiSTiK-tools:open-DB-info",
-      "SOFiSTiK-tools:open-SSD",
-      "SOFiSTiK-tools:open-WinGRAF",
-      "SOFiSTiK-tools:open-Result-Viewer",
-      "SOFiSTiK-tools:open-Teddy",
-      "SOFiSTiK-tools:open-Teddy-single",
-      "SOFiSTiK-tools:open-Teddy-1",
-      "SOFiSTiK-tools:open-Teddy-2",
-      "SOFiSTiK-tools:open-Teddy-3",
-      "SOFiSTiK-tools:open-Teddy-4",
-      "SOFiSTiK-tools:open-SOFiPLUS",
-      "SOFiSTiK-tools:export-CDB"
+      "sofistik-tools:current-help",
+      "sofistik-tools:current-help-[M]",
+      "sofistik-tools:current-help-[E]",
+      "sofistik-tools:calculation-WPS",
+      "sofistik-tools:calculation-WPS-immediately",
+      "sofistik-tools:calculation-WPS-current",
+      "sofistik-tools:calculation-SPS-immediately",
+      "sofistik-tools:export-PLB-to-DOCX",
+      "sofistik-tools:PROG-current-toggle",
+      "sofistik-tools:PROG-all-toggle",
+      "sofistik-tools:PROG-all-ON",
+      "sofistik-tools:PROG-all-OFF",
+      "sofistik-tools:PROG-above-toggle",
+      "sofistik-tools:PROG-above-ON",
+      "sofistik-tools:PROG-above-OFF",
+      "sofistik-tools:PROG-below-toggle",
+      "sofistik-tools:PROG-below-ON",
+      "sofistik-tools:PROG-below-OFF",
+      "sofistik-tools:clear-URS-tags",
+      "sofistik-tools:open-Animator",
+      "sofistik-tools:open-Animator-2018",
+      "sofistik-tools:open-report",
+      "sofistik-tools:open-report-auto-refresh",
+      "sofistik-tools:save-report-as-PDF",
+      "sofistik-tools:save-pictures-as-PDF",
+      "sofistik-tools:open-protocol",
+      "sofistik-tools:open-Viewer",
+      "sofistik-tools:open-DB-info",
+      "sofistik-tools:open-SSD",
+      "sofistik-tools:open-WinGRAF",
+      "sofistik-tools:open-Result-Viewer",
+      "sofistik-tools:open-Teddy",
+      "sofistik-tools:open-Teddy-single",
+      "sofistik-tools:open-Teddy-1",
+      "sofistik-tools:open-Teddy-2",
+      "sofistik-tools:open-Teddy-3",
+      "sofistik-tools:open-Teddy-4",
+      "sofistik-tools:open-SOFiPLUS",
+      "sofistik-tools:export-CDB"
     ],
     "atom-workspace": [
-      "SOFiSTiK-tools:IFC-export",
-      "SOFiSTiK-tools:IFC-import",
-      "SOFiSTiK-tools:open-cdbase.chm",
-      "SOFiSTiK-tools:toggle-examples",
-      "SOFiSTiK-tools:recache-examples",
-      "SOFiSTiK-tools:toggle-help",
-      "SOFiSTiK-tools:recache-help",
-      "SOFiSTiK-tools:change-version",
-      "SOFiSTiK-tools:version-2018",
-      "SOFiSTiK-tools:version-2020",
-      "SOFiSTiK-tools:version-2022",
-      "SOFiSTiK-tools:version-2023",
-      "SOFiSTiK-tools:version-2024",
-      "SOFiSTiK-tools:version-2025"
+      "sofistik-tools:IFC-export",
+      "sofistik-tools:IFC-import",
+      "sofistik-tools:open-cdbase.chm",
+      "sofistik-tools:toggle-examples",
+      "sofistik-tools:recache-examples",
+      "sofistik-tools:toggle-help",
+      "sofistik-tools:recache-help",
+      "sofistik-tools:change-version",
+      "sofistik-tools:version-2018",
+      "sofistik-tools:version-2020",
+      "sofistik-tools:version-2022",
+      "sofistik-tools:version-2023",
+      "sofistik-tools:version-2024",
+      "sofistik-tools:version-2025"
     ],
     ".tree-view": [
-      "SOFiSTiK-tools:clean-by-glob-pattern",
-      "SOFiSTiK-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB]",
-      "SOFiSTiK-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB]",
-      "SOFiSTiK-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE]",
-      "SOFiSTiK-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE]",
-      "SOFiSTiK-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB]",
-      "SOFiSTiK-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB]",
-      "SOFiSTiK-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB-PLB-BAK-SDB-DOCX-CFG-CSM]",
-      "SOFiSTiK-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB-PLB-BAK-SDB-DOCX-CFG-CSM]",
-      "SOFiSTiK-tools:MSCA-Fix-[S]",
-      "SOFiSTiK-tools:MSCA-Fix-[R]",
-      "SOFiSTiK-tools:open-Animator",
-      "SOFiSTiK-tools:open-Animator-2018",
-      "SOFiSTiK-tools:open-report",
-      "SOFiSTiK-tools:open-report-auto-refresh",
-      "SOFiSTiK-tools:save-report-as-PDF",
-      "SOFiSTiK-tools:save-pictures-as-PDF",
-      "SOFiSTiK-tools:open-protocol",
-      "SOFiSTiK-tools:open-Viewer",
-      "SOFiSTiK-tools:open-DB-info",
-      "SOFiSTiK-tools:open-SSD",
-      "SOFiSTiK-tools:open-WinGRAF",
-      "SOFiSTiK-tools:open-Result-Viewer",
-      "SOFiSTiK-tools:open-Teddy",
-      "SOFiSTiK-tools:open-Teddy-single",
-      "SOFiSTiK-tools:open-Teddy-1",
-      "SOFiSTiK-tools:open-Teddy-2",
-      "SOFiSTiK-tools:open-Teddy-3",
-      "SOFiSTiK-tools:open-Teddy-4",
-      "SOFiSTiK-tools:open-SOFiPLUS",
-      "SOFiSTiK-tools:export-CDB"
+      "sofistik-tools:clean-by-glob-pattern",
+      "sofistik-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB]",
+      "sofistik-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB]",
+      "sofistik-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE]",
+      "sofistik-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE]",
+      "sofistik-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB]",
+      "sofistik-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB]",
+      "sofistik-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB-PLB-BAK-SDB-DOCX-CFG-CSM]",
+      "sofistik-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB-PLB-BAK-SDB-DOCX-CFG-CSM]",
+      "sofistik-tools:MSCA-Fix-[S]",
+      "sofistik-tools:MSCA-Fix-[R]",
+      "sofistik-tools:open-Animator",
+      "sofistik-tools:open-Animator-2018",
+      "sofistik-tools:open-report",
+      "sofistik-tools:open-report-auto-refresh",
+      "sofistik-tools:save-report-as-PDF",
+      "sofistik-tools:save-pictures-as-PDF",
+      "sofistik-tools:open-protocol",
+      "sofistik-tools:open-Viewer",
+      "sofistik-tools:open-DB-info",
+      "sofistik-tools:open-SSD",
+      "sofistik-tools:open-WinGRAF",
+      "sofistik-tools:open-Result-Viewer",
+      "sofistik-tools:open-Teddy",
+      "sofistik-tools:open-Teddy-single",
+      "sofistik-tools:open-Teddy-1",
+      "sofistik-tools:open-Teddy-2",
+      "sofistik-tools:open-Teddy-3",
+      "sofistik-tools:open-Teddy-4",
+      "sofistik-tools:open-SOFiPLUS",
+      "sofistik-tools:export-CDB"
     ]
   },
   "license": "MIT",
