--- a/package.json
+++ b/package.json
@@ -31,42 +31,41 @@
   "activationCommands": {
     "atom-text-editor[data-grammar=\"source sofistik\"]": [
       "sofistik-tools:current-help",
-      "sofistik-tools:current-help-[M]",
-      "sofistik-tools:current-help-[E]",
+      "sofistik-tools:current-help-separately",
       "sofistik-tools:calculation-WPS",
       "sofistik-tools:calculation-WPS-immediately",
       "sofistik-tools:calculation-WPS-current",
       "sofistik-tools:calculation-SPS-immediately",
       "sofistik-tools:export-PLB-to-DOCX",
-      "sofistik-tools:PROG-current-toggle",
-      "sofistik-tools:PROG-all-toggle",
-      "sofistik-tools:PROG-all-ON",
-      "sofistik-tools:PROG-all-OFF",
-      "sofistik-tools:PROG-above-toggle",
-      "sofistik-tools:PROG-above-ON",
-      "sofistik-tools:PROG-above-OFF",
-      "sofistik-tools:PROG-below-toggle",
-      "sofistik-tools:PROG-below-ON",
-      "sofistik-tools:PROG-below-OFF",
+      "sofistik-tools:progam-current-toggle",
+      "sofistik-tools:progam-all-toggle",
+      "sofistik-tools:progam-all-ON",
+      "sofistik-tools:progam-all-OFF",
+      "sofistik-tools:progam-above-toggle",
+      "sofistik-tools:progam-above-ON",
+      "sofistik-tools:progam-above-OFF",
+      "sofistik-tools:progam-below-toggle",
+      "sofistik-tools:progam-below-ON",
+      "sofistik-tools:progam-below-OFF",
       "sofistik-tools:clear-URS-tags",
-      "sofistik-tools:open-Animator",
-      "sofistik-tools:open-Animator-2018",
+      "sofistik-tools:open-animator",
+      "sofistik-tools:open-animator-2018",
       "sofistik-tools:open-report",
       "sofistik-tools:open-report-auto-refresh",
       "sofistik-tools:save-report-as-PDF",
       "sofistik-tools:save-pictures-as-PDF",
       "sofistik-tools:open-protocol",
-      "sofistik-tools:open-Viewer",
-      "sofistik-tools:open-DB-info",
+      "sofistik-tools:open-viewer",
+      "sofistik-tools:open-dbinfo",
       "sofistik-tools:open-SSD",
-      "sofistik-tools:open-WinGRAF",
-      "sofistik-tools:open-Result-Viewer",
-      "sofistik-tools:open-Teddy",
-      "sofistik-tools:open-Teddy-single",
-      "sofistik-tools:open-Teddy-1",
-      "sofistik-tools:open-Teddy-2",
-      "sofistik-tools:open-Teddy-3",
-      "sofistik-tools:open-Teddy-4",
+      "sofistik-tools:open-wingraf",
+      "sofistik-tools:open-result-viewer",
+      "sofistik-tools:open-teddy",
+      "sofistik-tools:open-teddy-single",
+      "sofistik-tools:open-teddy-1",
+      "sofistik-tools:open-teddy-2",
+      "sofistik-tools:open-teddy-3",
+      "sofistik-tools:open-teddy-4",
       "sofistik-tools:open-SOFiPLUS",
       "sofistik-tools:export-CDB"
     ],
@@ -75,47 +74,41 @@
       "sofistik-tools:IFC-import",
       "sofistik-tools:open-cdbase.chm",
       "sofistik-tools:toggle-examples",
-      "sofistik-tools:recache-examples",
+      "sofistik-tools:cache-examples",
       "sofistik-tools:toggle-help",
-      "sofistik-tools:recache-help",
-      "sofistik-tools:change-version",
-      "sofistik-tools:version-2018",
-      "sofistik-tools:version-2020",
-      "sofistik-tools:version-2022",
-      "sofistik-tools:version-2023",
-      "sofistik-tools:version-2024",
-      "sofistik-tools:version-2025"
+      "sofistik-tools:cache-help",
+      "sofistik-tools:change-version"
     ],
     ".tree-view": [
-      "sofistik-tools:clean-by-glob-pattern",
-      "sofistik-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB]",
-      "sofistik-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB]",
-      "sofistik-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE]",
-      "sofistik-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE]",
-      "sofistik-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB]",
-      "sofistik-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB]",
-      "sofistik-tools:clean-[S]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB-PLB-BAK-SDB-DOCX-CFG-CSM]",
-      "sofistik-tools:clean-[R]-[ERG-PRT-LST-URS-SDB-DB2-PL-$??-#??-GRB-CDI-CDE-CDB-PLB-BAK-SDB-DOCX-CFG-CSM]",
-      "sofistik-tools:MSCA-Fix-[S]",
-      "sofistik-tools:MSCA-Fix-[R]",
-      "sofistik-tools:open-Animator",
-      "sofistik-tools:open-Animator-2018",
+      "sofistik-tools:clean-glob",
+      "sofistik-tools:clean-small",
+      "sofistik-tools:clean-small-recursively",
+      "sofistik-tools:clean-medium",
+      "sofistik-tools:clean-medium-recursively",
+      "sofistik-tools:clean-large",
+      "sofistik-tools:clean-large-recursively",
+      "sofistik-tools:clean-max",
+      "sofistik-tools:clean-max-recursively",
+      "sofistik-tools:MSCA-fix",
+      "sofistik-tools:MSCA-fix-recursively",
+      "sofistik-tools:open-animator",
+      "sofistik-tools:open-animator-2018",
       "sofistik-tools:open-report",
       "sofistik-tools:open-report-auto-refresh",
       "sofistik-tools:save-report-as-PDF",
       "sofistik-tools:save-pictures-as-PDF",
       "sofistik-tools:open-protocol",
-      "sofistik-tools:open-Viewer",
-      "sofistik-tools:open-DB-info",
+      "sofistik-tools:open-viewer",
+      "sofistik-tools:open-dbinfo",
       "sofistik-tools:open-SSD",
-      "sofistik-tools:open-WinGRAF",
-      "sofistik-tools:open-Result-Viewer",
-      "sofistik-tools:open-Teddy",
-      "sofistik-tools:open-Teddy-single",
-      "sofistik-tools:open-Teddy-1",
-      "sofistik-tools:open-Teddy-2",
-      "sofistik-tools:open-Teddy-3",
-      "sofistik-tools:open-Teddy-4",
+      "sofistik-tools:open-wingraf",
+      "sofistik-tools:open-result-viewer",
+      "sofistik-tools:open-teddy",
+      "sofistik-tools:open-teddy-single",
+      "sofistik-tools:open-teddy-1",
+      "sofistik-tools:open-teddy-2",
+      "sofistik-tools:open-teddy-3",
+      "sofistik-tools:open-teddy-4",
       "sofistik-tools:open-SOFiPLUS",
       "sofistik-tools:export-CDB"
     ]
