--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
       "sofistik-tools:open-animator",
       "sofistik-tools:open-animator-2018",
       "sofistik-tools:open-report",
-      "sofistik-tools:open-report-auto-refresh",
       "sofistik-tools:save-report-as-PDF",
       "sofistik-tools:save-pictures-as-PDF",
       "sofistik-tools:open-protocol",
@@ -81,20 +80,19 @@
     ],
     ".tree-view": [
       "sofistik-tools:clean-glob",
-      "sofistik-tools:clean-small",
-      "sofistik-tools:clean-small-recursively",
-      "sofistik-tools:clean-medium",
-      "sofistik-tools:clean-medium-recursively",
-      "sofistik-tools:clean-large",
-      "sofistik-tools:clean-large-recursively",
-      "sofistik-tools:clean-max",
-      "sofistik-tools:clean-max-recursively",
+      "sofistik-tools:clean-1",
+      "sofistik-tools:clean-1-recursively",
+      "sofistik-tools:clean-2",
+      "sofistik-tools:clean-2-recursively",
+      "sofistik-tools:clean-3",
+      "sofistik-tools:clean-3-recursively",
+      "sofistik-tools:clean-4",
+      "sofistik-tools:clean-4-recursively",
       "sofistik-tools:MSCA-fix",
       "sofistik-tools:MSCA-fix-recursively",
       "sofistik-tools:open-animator",
       "sofistik-tools:open-animator-2018",
       "sofistik-tools:open-report",
-      "sofistik-tools:open-report-auto-refresh",
       "sofistik-tools:save-report-as-PDF",
       "sofistik-tools:save-pictures-as-PDF",
       "sofistik-tools:open-protocol",
