--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
       "sofistik-tools:save-pictures-as-PDF",
       "sofistik-tools:open-protocol",
       "sofistik-tools:open-viewer",
+      "sofistik-tools:open-viewer-2025",
       "sofistik-tools:open-dbinfo",
       "sofistik-tools:open-SSD",
       "sofistik-tools:open-wingraf",
