--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "sofistik",
     "tools"
   ],
-  "version": "1.2.1",
+  "version": "1.2.2",
   "license": "MIT",
   "engines": {
     "atom": ">=1.100.0 <2.0.0"
@@ -122,7 +122,14 @@
       "title": "SOFiSTiK program version",
       "description": "Select the software version for which the programs will be used. Ensure that the software and licence are available on your computer.",
       "type": "string",
-      "enum": ["2025", "2024", "2023", "2022", "2020", "2018"],
+      "enum": [
+        "2025",
+        "2024",
+        "2023",
+        "2022",
+        "2020",
+        "2018"
+      ],
       "default": "2025"
     },
     "showKeystrokes": {
