--- a/package.json
+++ b/package.json
@@ -12,95 +12,15 @@
     "atom": ">=1.100.0 <2.0.0"
   },
   "main": "./lib/main",
-  "activationCommands": {
-    "atom-text-editor[data-grammar=\"source sofistik\"]": [
-      "sofistik-tools:current-help",
-      "sofistik-tools:current-help-separately",
-      "sofistik-tools:calculation-WPS",
-      "sofistik-tools:calculation-WPS-immediately",
-      "sofistik-tools:calculation-WPS-current",
-      "sofistik-tools:calculation-SPS-immediately",
-      "sofistik-tools:export-PLB-to-DOCX",
-      "sofistik-tools:progam-current-toggle",
-      "sofistik-tools:progam-all-toggle",
-      "sofistik-tools:progam-all-ON",
-      "sofistik-tools:progam-all-OFF",
-      "sofistik-tools:progam-above-toggle",
-      "sofistik-tools:progam-above-ON",
-      "sofistik-tools:progam-above-OFF",
-      "sofistik-tools:progam-below-toggle",
-      "sofistik-tools:progam-below-ON",
-      "sofistik-tools:progam-below-OFF",
-      "sofistik-tools:clear-URS-tags",
-      "sofistik-tools:open-animator",
-      "sofistik-tools:open-animator-2018",
-      "sofistik-tools:open-report",
-      "sofistik-tools:save-report-as-PDF",
-      "sofistik-tools:save-pictures-as-PDF",
-      "sofistik-tools:open-protocol",
-      "sofistik-tools:open-viewer",
-      "sofistik-tools:open-viewer-2025",
-      "sofistik-tools:open-dbinfo",
-      "sofistik-tools:open-SSD",
-      "sofistik-tools:open-wingraf",
-      "sofistik-tools:open-result-viewer",
-      "sofistik-tools:open-teddy",
-      "sofistik-tools:open-teddy-single",
-      "sofistik-tools:open-teddy-1",
-      "sofistik-tools:open-teddy-2",
-      "sofistik-tools:open-teddy-3",
-      "sofistik-tools:open-teddy-4",
-      "sofistik-tools:open-SOFiPLUS",
-      "sofistik-tools:export-CDB"
-    ],
-    "atom-workspace": [
-      "sofistik-tools:IFC-export",
-      "sofistik-tools:IFC-import",
-      "sofistik-tools:open-cdbase.chm",
-      "sofistik-tools:toggle-examples",
-      "sofistik-tools:cache-examples",
-      "sofistik-tools:toggle-help",
-      "sofistik-tools:cache-help",
-      "sofistik-tools:change-version"
-    ],
-    ".tree-view": [
-      "sofistik-tools:clean-glob",
-      "sofistik-tools:clean-1",
-      "sofistik-tools:clean-1-recursively",
-      "sofistik-tools:clean-2",
-      "sofistik-tools:clean-2-recursively",
-      "sofistik-tools:clean-3",
-      "sofistik-tools:clean-3-recursively",
-      "sofistik-tools:clean-4",
-      "sofistik-tools:clean-4-recursively",
-      "sofistik-tools:wing-fix",
-      "sofistik-tools:wing-fix-recursively",
-      "sofistik-tools:open-animator",
-      "sofistik-tools:open-animator-2018",
-      "sofistik-tools:open-report",
-      "sofistik-tools:save-report-as-PDF",
-      "sofistik-tools:save-pictures-as-PDF",
-      "sofistik-tools:open-protocol",
-      "sofistik-tools:open-viewer",
-      "sofistik-tools:open-viewer-2025",
-      "sofistik-tools:open-dbinfo",
-      "sofistik-tools:open-SSD",
-      "sofistik-tools:open-wingraf",
-      "sofistik-tools:open-result-viewer",
-      "sofistik-tools:open-teddy",
-      "sofistik-tools:open-teddy-single",
-      "sofistik-tools:open-teddy-1",
-      "sofistik-tools:open-teddy-2",
-      "sofistik-tools:open-teddy-3",
-      "sofistik-tools:open-teddy-4",
-      "sofistik-tools:open-SOFiPLUS",
-      "sofistik-tools:export-CDB"
-    ]
-  },
   "consumedServices": {
     "tree-view": {
       "versions": {
         "^1.0.0": "consumeTreeView"
+      }
+    },
+    "open-external": {
+      "versions": {
+        "^1.0.0": "consumeOpenExternalService"
       }
     }
   },
