--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sofistik-tools",
-  "description": "A superset of commands to improve SOFiSTiK workflow",
+  "description": "Commands and integrations for SOFiSTiK structural analysis workflow",
   "repository": "https://github.com/asiloisad/pulsar-sofistik-tools",
   "keywords": [
     "sofistik",
